チェックイン閉鎖投稿問い合わせにユーザ機能を本実装
