# frontend/src/api/swagger-spec.yaml
@@ -219,6 +219,20 @@ paths:
               schema:
                 $ref: '#/components/schemas/JwtToken'
       tags: *ref_2
+  /api/auth/me:
+    get:
+      operationId: me
+      summary: ''
+      description: ユーザ情報を取得する
+      parameters: []
+      responses:
+        '200':
+          description: ユーザ情報
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Users'
+      tags: *ref_2
 info:
   title: Cats example
   description: The cats API description
@@ -486,10 +500,6 @@ components:
           type: number
           description: 緯度
           example: 139.67996120452884
-        userId:
-          type: number
-          description: ユーザID
-          example: 1
         roadId:
           type: number
           description: 道路ID
@@ -497,7 +507,6 @@ components:
       required:
         - latitude
         - longitude
-        - userId
         - roadId
     GetUserHereRequest:
       type: object
@@ -519,14 +528,9 @@ components:
           type: number
           description: 閉鎖ステータスID
           example: 1
-        userId:
-          type: number
-          description: ユーザID
-          example: 1
       required:
         - parkingRoadId
         - closeStatusId
-        - userId
     CloseStatusLists:
       type: object
       properties:
